Fixed UI scrollbar issue

--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -13,4 +13,18 @@ body {
 
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
+
+    overflow-y: hidden;
+}
+
+main {
+    width: 100%;
+    height: 100%;
+    max-height: 100vh;
+
+    position: absolute;
+    top: 0;
+    box-sizing: border-box;
+
+    padding-top: 3.2rem;
 }
