--- a/public/scss/modules/_navbar.scss
+++ b/public/scss/modules/_navbar.scss
@@ -87,15 +87,3 @@
         border-bottom: 2px solid $color_accent;
     }
 }
-
-.divider {
-    // DIVIDER SIZE
-    width: 0.1rem;
-    height: 65%;
-
-    // DIVIDER POSITION
-    margin: 0 2rem;
-
-    // DIVIDER APPEARANCE
-    background-color: $color_secondary;
-}
